--- a/BlazorWasmSyncStart/Properties/launchSettings.json
+++ b/BlazorWasmSyncStart/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "BlazorSyncfusionNavigation": {
+    "BlazorWasmSyncStart": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
