--- a/BlazorWasmSyncStart/BlazorWasmSyncStart.csproj
+++ b/BlazorWasmSyncStart/BlazorWasmSyncStart.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorAnimate" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" PrivateAssets="all" />
     <PackageReference Include="Syncfusion.Blazor.Buttons" Version="20.2.0.45" />
