--- a/BlazorWasmSyncStart/wwwroot/manifest.json
+++ b/BlazorWasmSyncStart/wwwroot/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "BlazorWasmSyncStart",
   "start_url": "./",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "slateblue",
   "theme_color": "#03173d",
   "prefer_related_applications": false,
   "icons": [
