--- a/BlazorWasmSyncStart/wwwroot/manifest.json
+++ b/BlazorWasmSyncStart/wwwroot/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Blazor WasmSync Start",
+  "name": "Blazor Wasm Start",
   "short_name": "BlazorWasmSyncStart",
   "start_url": "./",
   "display": "standalone",
